# mcp-openai-server

./: .env.example  README.md  main.py  pyproject.toml
src/mcp_openai_server/: __init__.py  config.py  main.py  models.py  server.py
tests/: __init__.py  test_config.py  test_models.py  test_server.py
